--- a/app/components/sidebar/sidebar.html
+++ b/app/components/sidebar/sidebar.html
@@ -1,15 +1,15 @@
 <h1 class="logo">SIDE BAR</h1>
 <div class="wrapper">
     <section class="labels">
-        <sidebar-button class="sidebar-item" title="ALL-ALL-ALL"></sidebar-button>
-        <sidebar-button class="sidebar-item" title="label one"></sidebar-button>
-        <sidebar-button class="sidebar-item" title="label two"></sidebar-button>
-        <sidebar-button class="sidebar-item" title="label three"></sidebar-button>
+        <button sidebar class="sidebar-item" title="ALL-ALL-ALL"></button>
+        <button sidebar class="sidebar-item" title="label one"></button>
+        <button sidebar class="sidebar-item" title="label two"></button>
+        <button sidebar class="sidebar-item" title="label three"></button>
     </section>
     <section class="tools">
-        <sidebar-button class="sidebar-item" title="Market"></sidebar-button>
-        <sidebar-button class="sidebar-item" title="Waste basket"></sidebar-button>
-        <sidebar-button class="sidebar-item" title="Sync data"></sidebar-button>
-        <sidebar-button class="sidebar-item" title="Logout"></sidebar-button>
+        <button sidebar class="sidebar-item" title="Market"></button>
+        <button sidebar class="sidebar-item" title="Waste basket"></button>
+        <button sidebar class="sidebar-item" title="Sync data"></button>
+        <button sidebar class="sidebar-item" title="Logout"></button>
     </section>
 </div>
