--- a/app/components/nav/nav.sass
+++ b/app/components/nav/nav.sass
@@ -1,11 +1,14 @@
 @import '../common'
 
-nav title
+title[nav]
     display: inline-block
     width: 100%
     line-height: $navbar_height
     background-color: #EA3556
     padding: 0 15px
+
+button[nav]
+    line-height: $navbar_height
 
 btn-group
     @include prefix(display, flex !important)
