--- a/app/components/sidebar/sidebar.sass
+++ b/app/components/sidebar/sidebar.sass
@@ -22,3 +22,8 @@
         box-sizing: border-box
         width: 100%
         background-color: #5D646E
+
+button[sidebar]
+    width: 100%
+    line-height: 50px
+    text-align: left !important
