--- a/app/components/view/view.sass
+++ b/app/components/view/view.sass
@@ -17,6 +17,17 @@ view
         flex: 1 1 auto
         width: 100%
         height: auto
+        nav
+            position: relative
+            background-color: #fff
+            flex: 0 0 auto
+            width: 100%
+            height: $navbar_height
+            panel
+                line-height: $navbar_height
+                button
+                    width: 60px
+                    
         #view-content
             position: relative
             flex: 1 1 auto
