--- a/www/components/view/view.css
+++ b/www/components/view/view.css
@@ -15,6 +15,16 @@ view {
     flex: 1 1 auto;
     width: 100%;
     height: auto; }
+    view #view-inner nav {
+      position: relative;
+      background-color: #fff;
+      flex: 0 0 auto;
+      width: 100%;
+      height: 50px; }
+      view #view-inner nav panel {
+        line-height: 50px; }
+        view #view-inner nav panel button {
+          width: 60px; }
     view #view-inner #view-content {
       position: relative;
       flex: 1 1 auto;
