--- a/www/components/recipenote.html
+++ b/www/components/recipenote.html
@@ -27,17 +27,17 @@
                     <nav>
                         <panel id="view-header">
                             <button nav name="back" title="<<" (click)="view.hide();"></button>
-                            <title nav>aaa</title>
+                            <title nav>longer supported and will be removed in next major release</title>
                             <btn-group>
                                 <button nav name="color-sticker" title="CS"></button>
-                                <button nav name="hold-screen" title="HS"></button>
                                 <button nav name="edit" title="ED"></button>
+                                <button nav name="hold-screen" title="HS"></button>
                                 <button nav name="label" title="LB"></button>
                                 <button nav name="publish" title="PU"></button>
                                 <button nav name="share" title="SH"></button>
                                 <button nav name="download" title="DN"></button>
                                 <button nav name="delete" title="DL"></button>
-                                <button nav name="more" title="더.."></button>
+                                <button nav name="more" title="더"></button>
                             </btn-group>
                         </panel>
                     </nav>
