--- a/www/components/view/view.css
+++ b/www/components/view/view.css
@@ -4,7 +4,7 @@ view {
   flex-direction: column;
   flex: 1 1 auto;
   width: 100%;
-  min-width: 360px;
+  min-width: 320px;
   height: auto;
   box-sizing: border-box;
   background-color: #EDE5E2; }
@@ -17,14 +17,18 @@ view {
     height: auto; }
     view #view-inner nav {
       position: relative;
+      z-index: 10;
       background-color: #fff;
       flex: 0 0 auto;
       width: 100%;
-      height: 50px; }
+      height: 100%; }
       view #view-inner nav panel {
-        line-height: 50px; }
+        line-height: 40px; }
         view #view-inner nav panel button {
-          width: 60px; }
+          width: 40px;
+          height: 40px; }
+      view #view-inner nav panel#view-header btn-group {
+        width: 200px; }
     view #view-inner #view-content {
       position: relative;
       flex: 1 1 auto;
@@ -40,7 +44,31 @@ view {
     display: inline-block;
     margin: 10px; }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 470px) {
+  view nav panel#view-header btn-group {
+    width: 80px !important; } }
+
+@media screen and (min-width: 470px) and (max-width: 640px) {
+  view nav panel#view-header btn-group {
+    width: 200px !important; } }
+
+@media screen and (min-width: 640px) and (max-width: 740px) {
+  view nav panel#view-header btn-group {
+    width: 120px !important; } }
+
+@media screen and (min-width: 740px) and (max-width: 890px) {
+  view nav panel#view-header btn-group {
+    width: 160px !important; } }
+
+@media screen and (min-width: 890px) and (max-width: 1140px) {
+  view nav panel#view-header btn-group {
+    width: 120px !important; } }
+
+@media screen and (min-width: 1140px) {
+  view nav panel#view-header btn-group {
+    width: 200px !important; } }
+
+@media screen and (max-width: 640px) {
   view[active=true] {
     transform: translateX(-100%); }
   view {
