--- a/app/components/nav/nav.sass
+++ b/app/components/nav/nav.sass
@@ -8,7 +8,7 @@ title[nav]
     overflow: hidden
     text-overflow: ellipsis
     white-space: nowrap
-    background-color: #EA3556
+    background-color: #fff
     padding: 10px
     box-sizing: border-box
     
