--- a/app/components/panel/panel.sass
+++ b/app/components/panel/panel.sass
@@ -4,4 +4,4 @@ panel
     @include prefix(display, flex)
     width: 100%
     height: 100%
-    background-color: #EA3556
+    background-color: #EDE5E2
