--- a/app/components/recipenote.html
+++ b/app/components/recipenote.html
@@ -18,7 +18,7 @@
                     <item 
                     *ngFor="#recipe of recipes"
                     [recipeData]="recipe"
-                    (click)="view.show();">
+                    (click)="view.active();">
                     </item>
                 </div>
             </list>
@@ -26,24 +26,39 @@
                 <div id="view-inner">
                     <nav>
                         <panel id="view-header">
-                            <button nav name="back" title="<<" (click)="view.hide();"></button>
+                            <button nav name="back" title="<<" (click)="view.inactive();"></button>
                             <title nav>longer supported and will be removed in next major release</title>
                             <btn-group>
                                 <button nav name="color-sticker" title="CS"></button>
                                 <button nav name="edit" title="ED"></button>
                                 <button nav name="hold-screen" title="HS"></button>
                                 <button nav name="label" title="LB"></button>
-                                <button nav name="publish" title="PU"></button>
+                            <button nav name="publish" title="PU"></button>
                                 <button nav name="share" title="SH"></button>
                                 <button nav name="download" title="DN"></button>
                                 <button nav name="delete" title="DL"></button>
-                                <button nav name="more" title="더"></button>
+                                <button nav name="more" title="더" (click)="allHeaderMenu.toggleActivation();"></button>
                             </btn-group>
                         </panel>
                     </nav>
                     <div id="view-content">view-content</div>
-                    <footer id="view-toolbox">view-toolbox</footer>
+                    <toolbox id="view-toolbox">
+                        <btn-group>
+                            <button name="basic-info" title="BS"></button>
+                            <button name="step" title="ST"></button>
+                        </btn-group>
+                    </toolbox>
                 </div>
+                <popup-menu id="all-header-menu">
+                    <button popup-menu name="color-sticker" title="color-sticker"></button>
+                    <button popup-menu name="edit" title="edit"></button>
+                    <button popup-menu name="hold-screen" title="hold-screen"></button>
+                    <button popup-menu name="label" title="label"></button>
+                    <button popup-menu name="publish" title="publish"></button>
+                    <button popup-menu name="share" title="share"></button>
+                    <button popup-menu name="download" title="download"></button>
+                    <button popup-menu name="delete" title="delete"></button>
+                </popup-menu>
             </view>
         </panel>
         <panel id="cart">
