--- a/www/components/nav/nav.css
+++ b/www/components/nav/nav.css
@@ -1,12 +1,12 @@
 title[nav] {
   display: inline-block;
   width: 100%;
-  height: 40px;
+  height: 45px;
   line-height: 23px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  background-color: #EA3556;
+  background-color: #fff;
   padding: 10px;
   box-sizing: border-box; }
 
@@ -15,7 +15,7 @@ title[nav][expend=true] {
   white-space: normal; }
 
 button[nav] {
-  line-height: 40px; }
+  line-height: 45px; }
 
 btn-group {
   display: flex !important;
