--- a/www/components/recipenote.css
+++ b/www/components/recipenote.css
@@ -35,11 +35,11 @@ container {
     background-color: #777;
     flex: 0 0 auto;
     width: 100%;
-    height: 40px; }
+    height: 45px; }
     container nav panel {
-      line-height: 40px; }
+      line-height: 45px; }
       container nav panel button {
-        width: 40px; }
+        width: 45px; }
 
 content {
   position: relative;
@@ -63,11 +63,19 @@ content {
     max-width: 640px;
     height: auto;
     box-sizing: border-box;
-    background-color: #EDE5E2;
-    border-right: 1px solid #888; }
+    background-color: #EDE5E2; }
 
 nav button[name=more] {
   position: absolute;
+  right: 0; }
+
+view popup-menu button {
+  display: block;
+  width: 100%;
+  text-align: left; }
+
+view popup-menu#all-header-menu {
+  top: 45px;
   right: 0; }
 
 @media screen and (max-width: 640px) {
