--- a/www/components/view/view.css
+++ b/www/components/view/view.css
@@ -23,22 +23,22 @@ view {
       width: 100%;
       height: 100%; }
       view #view-inner nav panel {
-        line-height: 40px; }
+        line-height: 45px; }
         view #view-inner nav panel button {
-          width: 40px;
-          height: 40px; }
+          width: 45px;
+          height: 45px; }
       view #view-inner nav panel#view-header btn-group {
-        width: 200px; }
+        width: 180px; }
     view #view-inner #view-content {
       position: relative;
       flex: 1 1 auto;
       width: 100%;
       height: 100%; }
-    view #view-inner #view-toolbox {
+    view #view-inner toolbox {
       position: relative;
       flex: 0 0 auto;
       width: 100%;
-      height: 50px;
+      height: 45px;
       background-color: #999; }
   view .box {
     display: inline-block;
@@ -46,27 +46,27 @@ view {
 
 @media screen and (max-width: 470px) {
   view nav panel#view-header btn-group {
-    width: 80px !important; } }
+    width: 90px !important; } }
 
 @media screen and (min-width: 470px) and (max-width: 640px) {
   view nav panel#view-header btn-group {
-    width: 200px !important; } }
+    width: 225px !important; } }
 
 @media screen and (min-width: 640px) and (max-width: 740px) {
   view nav panel#view-header btn-group {
-    width: 120px !important; } }
+    width: 135px !important; } }
 
 @media screen and (min-width: 740px) and (max-width: 890px) {
   view nav panel#view-header btn-group {
-    width: 160px !important; } }
+    width: 180px !important; } }
 
 @media screen and (min-width: 890px) and (max-width: 1140px) {
   view nav panel#view-header btn-group {
-    width: 120px !important; } }
+    width: 135px !important; } }
 
 @media screen and (min-width: 1140px) {
   view nav panel#view-header btn-group {
-    width: 200px !important; } }
+    width: 225px !important; } }
 
 @media screen and (max-width: 640px) {
   view[active=true] {
@@ -76,4 +76,4 @@ view {
     top: 0;
     height: 100%;
     transform: translateX(0);
-    transition: all 300ms ease; } }
+    transition: all 0.4s cubic-bezier(0.25, 0.8, 0.25, 1); } }
