--- a/app/components/popup-menu/popup-menu.sass
+++ b/app/components/popup-menu/popup-menu.sass
@@ -7,12 +7,32 @@ popup-menu
     min-width: 80px
     min-height: 25px
     height: auto
-    background-color: #fff
-    transition: $transition_default
-    opacity: 0
-    transform: scale(0.8) translateY(-40px)
-    
+    perspective: 1300px
+    panel
+        display: block
+        background-color: #fff
+        button
+            display: block
+            width: 100%
+            text-align: left
+            
+popup-menu
+    panel
+        opacity: 0
+        transition: $transition_default
+        transform-style: preserve-3d
+        transform: rotateX(35deg)
+        transform-origin: 50% 0
+
+popup-menu[flip-up]
+    panel
+        opacity: 0
+        transition: $transition_default
+        transform-style: preserve-3d
+        transform: rotateX(-35deg)
+        transform-origin: 50% 100%
+
 popup-menu[active=true]
-    display: block
-    opacity: 1
-    transform: scale(1) translateY(0)
+    panel
+        opacity: 1
+        transform: rotateX(0deg)
