--- a/www/components/panel/panel.css
+++ b/www/components/panel/panel.css
@@ -5,5 +5,4 @@ panel {
   -ms-display: flex;
   -o-display: flex;
   width: 100%;
-  height: 100%;
-  background-color: #EDE5E2; }
+  height: auto; }
