--- a/www/styles.css
+++ b/www/styles.css
@@ -1,3 +1,87 @@
+@font-face {
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 100;
+  src: url(fonts/NotoSansKR-Thin.woff2) format('woff2'),
+       url(fonts/NotoSansKR-Thin.woff) format('woff'),
+       url(fonts/NotoSansKR-Thin.otf) format('opentype');
+}
+@font-face {
+  font-family: 'Noto Sans KR';
+  font-style: normal;
+  font-weight: 300;
+  src: url(fonts/NotoSansKR-Light.woff2) format('woff2'),
+       url(fonts/NotoSansKR-Light.woff) format('woff'),
+       url(fonts/NotoSansKR-Light.otf) format('opentype');
+}
+@font-face {
+   font-family: 'Noto Sans KR';
+   font-style: normal;
+   font-weight: 400;
+   src: url(fonts/NotoSansKR-Regular.woff2) format('woff2'),
+        url(fonts/NotoSansKR-Regular.woff) format('woff'),
+        url(fonts/NotoSansKR-Regular.otf) format('opentype');
+ }
+
+ /*
+  * Nanum Barun Gothic Web Fonts
+  * https://github.com/hiun/NanumBarunGothic
+  * Copyright (c) 2010, NAVER Corporation (http://www.nhncorp.com)
+  */
+
+ @font-face {
+   font-family: 'Nanum Barun Gothic';
+   font-style: normal;
+   font-weight: 200;
+   src: url(fonts/NanumBarunGothicUltraLight.eot);
+   src: local('Nanum Barun Gothic UltraLight'),
+        local('NanumBarunGothicUltraLight'),
+        url(fonts/NanumBarunGothicUltraLight.eot?#iefix) format('embedded-opentype'),
+        url(fonts/NanumBarunGothicUltraLight.woff2) format('woff2'),
+        url(fonts/NanumBarunGothicUltraLight.woff) format('woff'),
+        url(fonts/NanumBarunGothicUltraLight.ttf) format('truetype');
+ }
+
+ @font-face {
+   font-family: 'Nanum Barun Gothic';
+   font-style: normal;
+   font-weight: 300;
+   src: url(fonts/NanumBarunGothicLight.eot);
+   src: local('Nanum Barun Gothic Light'),
+        local('NanumBarunGothicLight'),
+        url(fonts/NanumBarunGothicLight.eot?#iefix) format('embedded-opentype'),
+        url(fonts/NanumBarunGothicLight.woff2) format('woff2'),
+        url(fonts/NanumBarunGothicLight.woff) format('woff'),
+        url(fonts/NanumBarunGothicLight.ttf) format('truetype');
+ }
+
+ @font-face {
+   font-family: 'Nanum Barun Gothic';
+   font-style: normal;
+   font-weight: 400;
+   src: url(fonts/NanumBarunGothic.eot);
+   src: local('Nanum Barun Gothic'),
+        local('NanumBarunGothic'),
+        url(fonts/NanumBarunGothic.eot?#iefix) format('embedded-opentype'),
+        url(fonts/NanumBarunGothic.woff2) format('woff2'),
+        url(fonts/NanumBarunGothic.woff) format('woff'),
+        url(fonts/NanumBarunGothic.ttf) format('truetype');
+ }
+
+ @font-face {
+   font-family: 'Nanum Barun Gothic';
+   font-style: normal;
+   font-weight: 700;
+   src: url(fonts/NanumBarunGothicBold.eot);
+   src: local('Nanum Barun Gothic Bold'),
+        local('NanumBarunGothicBold'),
+        url(fonts/NanumBarunGothicBold.eot?#iefix) format('embedded-opentype'),
+        url(fonts/NanumBarunGothicBold.woff2) format('woff2'),
+        url(fonts/NanumBarunGothicBold.woff) format('woff'),
+        url(fonts/NanumBarunGothicBold.ttf) format('truetype');
+ }
+
+
 * {
     -webkit-tap-highlight-color: transparent;
 }
@@ -5,8 +89,9 @@ html {
     height: 100%;
 }
 body {
-    font-family: Arial,'Helvetica Neue',Helvetica,sans-serif;
-    font-size: 12px;
+    font-family: 'Nanum Barun Gothic', Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 13px;
+    font-weight: 400;
     -webkit-touch-callout: none;
     -webkit-text-size-adjust: none;
     -webkit-user-select: none;
